# transformer2

./: EVALUATION_GUIDE.md  README.md  demo.ipynb  evaluate.py  evaluation_guide.py  inference.py  main.py  pyproject.toml  train.py
configs/: A_small.json  C_tiny.json  D_no_dropout.json  base.json  base_half.json  base_original.json  big.json  big_model.json  many_heads.json  small_heads.json  tiny.json
src/: bpe.py  bpe_adapter.py  data_loader.py  data_utils.py  lr_scheduler.py  metrics.py  model.py  trainer.py
