[project]
name = "transformer"
version = "0.1.0"
description = "Attention is All You Need"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.3.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "pyarrow==19.0.0",
    "torch==2.2.2+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.17.2+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchaudio==2.2.2+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
[tool.uv.index]
url = "https://download.pytorch.org/whl/cu121"
